--- a/login.html
+++ b/login.html
@@ -11,12 +11,24 @@
     <body>
         <h1 class="title">Login</h1>
 
-        <button class="button" id="back">back</button><br>
+        <div class="button_placehodler">
+            <button class="button" id="back">back</button><br>
+        </div>
+        
 
         <div class="login_input">
-            <input type="text" id="name" name="name" placeholder="Username" class="login_input_element"><br>
-            <input type="password" id="name" name="name" placeholder="password" class="login_input_element">
+            <input type="text" id="loginName" name="name" placeholder="Username" class="login_input_element"><br>
+            <input type="password" id="loginPassword" name="password" placeholder="password" class="login_input_element"><br>
+
+            <div class="confirme_placeholder">
+                <button class="button" id="confirmLogin">confirm</button>
+            </div>
         </div>
+
+        <div onclick="" class="button_placehodler"> <!--in the atribut you can write javascript-->
+            <button class="button" id="register">register</button>
+        </div>
+        
 
         <script src="test.js"></script>
     </body>
